# pyastix

./: .gitignore  LICENSE  README.md  pyproject.toml  test_method_ids.py
examples/: .pyastixignore.example  README.md  __init__.py  simple_usage.py  terminal_visualization.py
pyastix/: __init__.py  cli.py  complexity.py  graph.py  parser.py  web_interface.py
pyastix/core/: __init__.py  graph.py  parser.py
pyastix/interfaces/: terminal_interface.py  web_interface.py
pyastix/models/: __init__.py  code_element.py  codebase.py  graph_element.py
pyastix/static/: __init__.py  script.js  style.css
pyastix/static/css/: style.css
pyastix/static/js/: script.js
pyastix/static/templates/: index.html
pyastix/templates/: __init__.py  index.html
tests/: __init__.py  test_complexity.py  test_complexity_metrics.py  test_ignore_patterns.py  test_maintainability.py  test_mi_ratings.py  test_pyastix.py
tests/test_project/: __init__.py  main.py
